<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="#41474A" android:textAlignment="viewEnd">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity" android:background="#41474A" android:textAlignment="viewEnd"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent">
        <EditText
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editTextCode"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="112dp"
                app:layout_constraintTop_toTopOf="@+id/textViewCode" android:layout_marginTop="24dp"
                android:hint="@string/number_hint"
                android:textColor="#FFF6F6"/>
        <TextView
                android:text="@string/number_text"
                android:layout_width="180dp"
                android:layout_height="25dp" android:id="@+id/textViewCode"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:background="#484F60" android:textColor="#ABBED5" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="112dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="328dp" android:textAlignment="center" android:visibility="invisible"/>
        <EditText
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editTextTextFrom"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="@+id/textViewFrom" android:layout_marginTop="24dp"
                android:hint="@string/hintFrom"
                android:textColor="#FFF6F6"/>
        <EditText
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editTextTextTo"
                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textViewTo" android:layout_marginTop="24dp"
                android:hint="@string/hintTo"
                android:textColor="#FFF6F6"/>
        <TextView
                android:layout_width="180dp"
                android:layout_height="25dp" android:id="@+id/textViewTo"
                android:text="@string/to_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:textColor="#ABBED5"
                android:background="#484F60" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="328dp"
                android:textAlignment="center"/>
        <TextView
                android:text="@string/from_text"
                android:layout_width="180dp"
                android:layout_height="25dp" android:id="@+id/textViewFrom"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:background="#484F60" android:textColor="#ABBED5" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="328dp" android:textAlignment="center"/>
        <Button
                android:text="@string/search_btn_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/search"
                android:backgroundTint="#484F60"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="424dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="156dp"
                android:textColor="#ABBED5"/>
        <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" tools:layout_editor_absoluteX="0dp"
                android:background="#4E5059" android:id="@+id/LV" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="4dp"/>
        <Switch
                android:text="@string/switch_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/mswitch"
                android:textSize="9sp" android:backgroundTint="#484F60"
                android:background="#484F60" android:textColor="#ABBED5" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="434dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginEnd="265dp"
                app:layout_constraintEnd_toEndOf="parent"/>
        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="311dp"
                android:id="@+id/RV" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="4dp" app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>